(lang dune 1.10)
(using fmt 1.1)
(name owork)
(generate_opam_files true)
(authors "Jeffas")
(maintainers "Jeffas <dev@jeffas.io>")
(source (github jeffa5/owork))

(package
(name owork)
(synopsis "A productivity timer for focusing on work")
(description "Owork is a productivity timer. It provides a server executable which uses a state machine to start different timers for sessions. There are four states: idle, working, short break and long break.")
(depends (dune (and :build (> 1.5)))
    (lwt_ppx (> 1))
)
(tags (productivity timer work))
)
